--- a/first-react-app/src/Calendar.css
+++ b/first-react-app/src/Calendar.css
@@ -1,7 +1,15 @@
+.card-body {
+  margin: 50px;
+}
+
 .calendar {
   text-align: center;
   margin: 100px auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
   font-family: Arial, sans-serif;
+  background-color: rgba(244, 61, 61, 0.507);
+  border-radius: 8px;
 }
 
 .calendar-header {
@@ -11,6 +19,14 @@
   margin: auto;
   margin-bottom: 20px;
   font-weight: bold;
+  color: rgb(130, 24, 24); 
+}
+
+.button2, .button3 {
+  color:rgb(255, 115, 115);
+  background-color: rgb(219, 31, 31);
+  border-radius: 4px;
+  border-color: rgba(244, 61, 61, 0.738);
 }
 
 .calendar-grid {
@@ -22,6 +38,7 @@
 
 .day {
   font-weight: bold;
+  color: rgb(169, 31, 31);
 }
 
 .date {
@@ -33,19 +50,20 @@
 }
 
 .date:hover {
-  background-color: #ddd;
+  background-color:rgba(174, 35, 35, 0.475);
 }
 
 .today {
-  border: 2px solid #007bff;
+  border: 2px solid rgb(130, 24, 24);
 }
 
 .selected {
-  background-color: #007bff;
+  background-color: rgb(174, 35, 35);
   color: white;
 }
 
 .selected-info {
   margin-top: 15px;
   font-weight: bold;
+  color:rgb(130, 24, 24);
 }
