--- a/first-react-app/src/Notes.css
+++ b/first-react-app/src/Notes.css
@@ -2,11 +2,19 @@
 .notes-container {
     max-width: 600px;
     margin: 0 auto;
+    padding: 15px;
+    border-radius: 8px;
     font-family: Arial, sans-serif;
+    background-color: rgb(250, 122, 93);
   }
   
-  .note-item button {
-    margin-left: 10px;
-    cursor: pointer;
-  }
+.button1 {
+  color: rgb(167, 25, 25);
+  background-color:rgba(255, 89, 89, 0.589);
+  border-radius: 4px;
+  border-color: rgba(244, 61, 61, 0.738);
+}
   
+textarea {
+  background-color: hsl(11, 100%, 90%);
+}
