--- a/first-react-app/src/Calendar.css
+++ b/first-react-app/src/Calendar.css
@@ -7,7 +7,7 @@
   margin: 100px auto;
   padding-top: 10px;
   padding-bottom: 10px;
-  font-family: Arial, sans-serif;
+  font-family: Georgia, serif;
   background-color: rgba(244, 61, 61, 0.507);
   border-radius: 8px;
 }
